# doctor_assitant_ai

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  test_qdrant.rs  test_qdrant_insert.rs  test_redis.rs
src/: main.rs
src/api/: mod.rs  routes.rs
src/brain/: llm.rs  mod.rs  pipeline.rs
src/brain/rag/: embedder.rs  mod.rs  qdrant_db.rs  redis_cache.rs
src/core/: config.rs
src/services/: embedding.rs  mod.rs  recorder.rs  speech_recognition.rs
src/services/local_audio/: mod.rs
src/services/openai_audio/: mod.rs
