[package]
name = "doctor_assist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart"] }
axum-extra = "0.12.6"
cpal = "0.18.1"
dotenv = "0.15.0"
hound = "3.5.1"
reqwest = { version = "0.13.4", features = ["multipart", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors"] }
uuid = { version = "1.23.4", features = ["v4"] }
whisper-rs = "0.16.0"
